--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import './components/blog';
 @import './components/about1';
 @import './components/reviews';
+@import './components/work';
 
 @import './components/footer';
 @import './components/modal';
