--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,7 +1,7 @@
 @import 'normalize.css/normalize';
-@import 'nouislider/distribute/nouislider';
-@import 'custom-select/src/css/custom-select';
-@import 'swiper/swiper-bundle';
+// @import 'nouislider/distribute/nouislider';
+// @import 'custom-select/src/css/custom-select';
+// @import 'swiper/swiper-bundle';
 
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
