--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -317,12 +317,16 @@
   }
 
   &__container {
-    padding: 75px 25px 130px;
+    padding: 80px 45px 130px;
     background-color: var(--color-white);
     box-shadow: 0 20px 50px rgba(7, 21, 64, 0.1);
 
     @include lg {
       padding: 75px 15px 130px;
+    }
+
+    @include sm {
+      padding: 50px 15px;
     }
   }
 
@@ -333,7 +337,6 @@
   }
 
   &__list {
-    margin-top: 75px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
@@ -343,15 +346,63 @@
     }
 
     @include md {
-      margin-top: 50px;
     }
 
     @include sm {
-      margin-top: 30px;
       grid-template-columns: 1fr;
     }
   }
 
   &__item {
+    img,
+    picture {
+      display: block;
+      height: auto;
+    }
+  }
+
+  &__article {
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  &__link {
+    display: block;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        to top,
+        rgba(34, 34, 34, 0.78) 0,
+        rgba(34, 34, 34, 0) 100%
+      );
+      transition: background 0.3s;
+    }
+
+    &:hover {
+      &::before {
+        background: linear-gradient(0deg, #127ec3 0, rgba(0, 0, 0, 0.55) 85%);
+        transition: background 0.3s;
+      }
+    }
+  }
+
+  &__info {
+    position: absolute;
+    left: 0;
+    bottom: 25px;
+    border-left: 2px solid var(--color-blue);
+    padding-left: 25px;
+    font-size: 20px;
+    font-weight: 800;
+    color: var(--color-white);
+    text-transform: uppercase;
+    line-height: 30px;
   }
 }
