--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import './components/about1';
 @import './components/reviews';
 @import './components/work';
+@import './components//home_city';
 
 @import './components/footer';
 @import './components/modal';
