--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,8 @@
 @import './components/about1';
 @import './components/reviews';
 @import './components/work';
-@import './components//home_city';
+@import './components/home_city';
+@import './components/home_car';
 
 @import './components/footer';
 @import './components/modal';
