--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -471,7 +471,7 @@
     background: url('../img/services_bg.jpg') center center no-repeat;
   }
 
-  &--home-seo {
+  &--moscow {
     height: 1847px;
 
     .webp & {
@@ -480,6 +480,20 @@
 
     .no-webp & {
       background: url('../img/services_bg--moscow.jpg') center center no-repeat;
+    }
+  }
+
+  &--mini-clubman {
+    height: 1847px;
+
+    .webp & {
+      background: url('../img/services_bg--mini-clubman.webp') center center
+        no-repeat;
+    }
+
+    .no-webp & {
+      background: url('../img/services_bg--mini-clubman.jpg') center center
+        no-repeat;
     }
   }
 
@@ -1981,9 +1995,14 @@
       width: auto;
     }
 
+    &--home-seo-car {
+      right: -303px;
+    }
+
     picture,
     img {
       display: block;
+      height: auto;
     }
   }
 
